soroban-sdk/tests/macros_fails/macros_spec_toolong.rs
use soroban_sdk::contractimpl;

pub struct Contract;

#[contractimpl]
impl Contract {
    pub fn pay_to_destionation() {
        unimplemented!()
    }
}

pub fn main() {}
